--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
     padding: 5px;
 
     font-family: Segment,'Courier New', Courier, monospace, serif;
+    font-size: 50px;
 
     color:rgba(244,207,72,255);
 }
