--- a/css/l&c.css
+++ b/css/l&c.css
@@ -108,6 +108,57 @@ body {
     border-left: 45px solid transparent;
 }
 
+/* Responsive */
+
+.menu {
+    display: none;
+}
+
+.menu-input {
+    display: none;
+}
+
+@media screen and (max-width:1100px) {
+    .menu{
+        display:block;
+        position: relative;
+
+        font-size: 40px;
+
+        color:var(--golden);
+    }
+
+    .nav-BP {
+        display: none;
+    }
+
+    input[type=checkbox]:checked ~ .nav-BP {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        position: fixed;
+        width: 100%;
+        top: 89px;
+
+        padding: 10px;
+
+        background-color:var(--bandeau-fond);
+
+    }
+
+    .nav-BP a {
+        font-size:25px;
+        
+        padding: 0.25em 1.4em;
+
+        border: none;
+        border-radius:10px;
+    }
+
+}
+
 /* titre */
 
 .titre {
