--- a/css/style.css
+++ b/css/style.css
@@ -1,163 +1,12 @@
+/* bandeau */
+
+@import url(bandeau.css);
+
+/* base */
+
 body {
     margin: 0;
 }
-
-/* Bandeau Code CSS */
-
-.bandeau{
-    display: flex;
-    position: fixed;
-
-    justify-content: space-between;
-    align-items: center;
-
-    padding: 0;
-    margin: 0;
-
-    width: 100%;
-
-    background:rgba(42,50,105,255);
-}
-
-.nav-BP a{
-    padding: 5px;
-    margin: 5px 25px;
-    color:rgba(244,207,72,255);
-    text-decoration:none;
-    border-style:double;
-
-    display: inline-block;
-}
-
-.nav-BP a:active {
-    color:rgba(244,207,72,255);
-}
-
-.nav-BP a:hover{
-    background-color:#3d5b94;
-    transition: 0.5s;
-}
-
-.nav-title {
-    cursor: pointer;
-
-    margin: 0;
-    padding: 5px;
-
-    font-family: Segment,'Courier New', Courier, monospace, serif;
-    font-size: 50px;
-
-    color:rgba(244,207,72,255);
-}
-
-.nav-title:hover {
-    animation: glow 1.5s ease-in-out infinite alternate;
-}
-
-@keyframes glow {
-    100%{
-        text-shadow:0 0 3px #FFE205, 0 0 7px #FFE205, 0 0 20px #EDD205;color:#FFE205;
-    }
-    0%{
-      text-shadow: 0;
-    }
-}
-
-.nav-logo {
-    height: 60px;
-    width: 55px;
-
-    margin:0;
-}
-
-.nav-logo:hover {
-    animation: turn 5s ease-in-out infinite alternate;
-}
-
-@keyframes turn {
-    100%{
-        transform: rotate(360deg);  
-    }
-    0%{
-        transform: rotate(0deg);
-    }
-}
-
-.Bord_1{
-    width: 0;
-    height: 0;
-
-    background-color: transparent;
-
-    border-right : 45px solid transparent;
-    border-bottom : 45px solid #16233b;
-    border-top: 45px solid #16233b;
-    border-left: 45px solid #16233b;
-}
-
-.Bord_2{
-    width: 0;
-    height: 0;
-
-    background-color: transparent;
-
-    border-right : 45px solid #16233b;
-    border-bottom : 45px solid #16233b;
-    border-top: 45px solid #16233b;
-    border-left: 45px solid transparent;
-}
-
-/* Responsive */
-
-.menu {
-    display: none;
-}
-
-.menu-input {
-    display: none;
-}
-
-@media screen and (max-width:1100px) {
-    .menu{
-        display:block;
-        position: relative;
-
-        font-size: 40px;
-
-        color:var(--golden);
-    }
-
-    .nav-BP {
-        display: none;
-    }
-
-    input[type=checkbox]:checked ~ .nav-BP {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        position: fixed;
-        width: 100%;
-        top: 89px;
-
-        padding: 10px;
-
-        background-color:var(--bandeau-fond);
-
-    }
-
-    .nav-BP a {
-        font-size:25px;
-        
-        padding: 0.25em 1.4em;
-
-        border: none;
-        border-radius:10px;
-    }
-
-}
-
 
 /* Portfolio nom     */
 
