--- a/css/l&c.css
+++ b/css/l&c.css
@@ -112,3 +112,18 @@ a, a:active {
     font-family: Segment;
     src: url(../font/Seven\ Segment.ttf) format(truetype);
 }
+
+/* responsive */
+
+@media  screen and (max-width:1000px) {
+    .main-title {
+       font-size: 80px;
+    }  
+}
+
+@media  screen and (max-width:800px){
+    .electronique-main, .informatique-main, .info-emb-main {
+        flex-direction: column;
+    }
+}
+
