--- a/css/bandeau.css
+++ b/css/bandeau.css
@@ -163,5 +163,19 @@
 
 }
 
+@media screen and (max-width:1000px){
+    .nav-BP a {
+        font-size:50px;
+    }
 
+}
+
+@media screen and (max-height:500px) {
+    .bandeau {
+        position:static;
+    }
+    input[type=checkbox]:checked ~ .nav-BP {
+        position:absolute;
+    }   
+}
 
